<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/help_fragment_id"
    tools:context="com.qbi.vigil.HelpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:text="@string/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:id="@+id/about_title"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/about_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_title"
            android:layout_marginTop="15dp"
            android:id="@+id/about_content"
            android:textSize="18sp" />

        <TextView
            android:text="@string/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_content"
            android:layout_marginTop="15dp"
            android:id="@+id/contact_title"
            android:textStyle="normal|bold"
            android:textSize="24sp" />

        <TextView
            android:text="@string/contact_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_title"
            android:layout_marginTop="15dp"
            android:id="@+id/contact_content"
            android:textSize="18sp" />

        <TextView
            android:text="@string/contact_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_content"
            android:layout_marginTop="15dp"
            android:id="@+id/contact_url"
            android:textColor="@android:color/holo_blue_dark"
            android:clickable="true"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_url"
            android:layout_marginTop="15dp"
            android:text="Back"
            android:id="@+id/back_button" />
    </RelativeLayout>

</FrameLayout>
